# utxo6-dns

./: .gitignore  ARCHITECTURE  CONTRIBUTING.md  DIRECTORY_STRUCTURE.md  Global Performance Testnet for Developer Production Deployment  LICENSE  README.md  UTXO NETWORK TESTING  UTXO6-DNS White Paper  add Linked Identity Compliance Verification framework.docx  add e-CNY multi-channel payment system with UTXO-DNS integration  package.json
.github/: CONTRIBUTORS.yml  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  labeler.yml  stale.yml
JMBC-CBDC/: Integrated Rack Broussonetia papyriferament system with UTXO-DNS integration
`integrations/tee-wallet-pluggable/: package.json`
`packages/iso20022/: package.json`
`packages/zk-privacy/: package.json`
docs/: DIRECTORY_GUIDE.md  DIRECTORY_INDEX.md  Global Performance Testnet for Developer Production Deployment  bis-integration-comparison.md  merchant-acquiring-system.md  stablecoin-infrastructure.md  white-paper.md
docs/docs/: utxo-on-evm.md
examples/: bis-settlement-example.ts  contract-utxo-example.ts  cross-border-swap-example.ts  cross-chain-swap.ts  evm-example.ts  explorer-example.ts  htlc-example.ts  monitor-example.ts  opcode-example.ts  state-example.ts
integrations/jmbc-bis-unified-ledger/: Cargo.toml  README.md
integrations/jmbc-bis-unified-ledger/src/: atomic_settlement.rs  ledger_connector.rs  lib.rs
integrations/tee-wallet-pluggable/: README.md
integrations/trade-profile/: README.md  package.json
scripts/: generate-index.sh
sdk/: utxo-on-evm-zh.md
sdk/typescript/: README.md  jest.config.ts  (+2 more)
src/: CoCaDEX-RWA Compute Resource Configuration Center module
(+40 files in other folders)
